--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1 {
   line-height: 1.5;
   text-align: center;
   padding-top: 20px;
+  color: red;
 }
 
 h2 {
@@ -117,7 +118,7 @@ input:checked ~ .tab-content {
   border-radius: 5px;
   margin-bottom: 10px;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 20px;
   
   display: flex;
   justify-content: space-between;
