--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,11 @@ body {
 
 h1 {
   margin: 0;
-  line-height: 1.5;
+  line-height: 1.3;
   text-align: center;
   padding-top: 20px;
-  color: orangered;
+  color: #555;
+  font-size: 7vw;
 }
 
 h2 {
@@ -136,4 +137,27 @@ input:checked ~ .tab-content {
   justify-content: center;
   font-size: 10px;
   font-weight: bold;
+}
+
+.curved{
+  width: 80vw;
+  display: block;
+  margin:10px auto;
+  
+  transform: rotate(3deg);
+  
+}
+
+footer{
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 50px 30px;
+  justify-content: center;
+  width: 100%;
+  
+}
+footer div{
+  margin-right: 20px;
 }
