--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+@font-face {
+  font-family: kalporosh;
+  src: url(../assets/fonts/kalpurush.ttf);
+}
 
 body {
   color: #2c3e50;
@@ -162,18 +166,19 @@ footer div{
   margin-right: 20px;
 }
 .notice {
-  background: lightcoral;
+  background-color: #000;
   padding: 30px;
   border-radius: 10px;
   position: relative;
+  box-sizing: border-box;
   
 }
 .notice .title{
   height: 30px;
   width: 24vw;
-  background: #000;
+  background-image: linear-gradient(to right,#C33764, #1D2671);
   position: absolute;
-  top: -30%;
+  top: -15px;
   border-radius: 5px;
   left: 50%;
   color: yellow;
@@ -182,7 +187,18 @@ footer div{
   display: flex;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
+  
 }
 .notice span{
   padding-left: 3px;
+}
+.notice p{
+  margin: 0;
+  text-align: center;
+  color: yellow;
+  font-weight: thin;
+  font-size: 20px;
+  font-family: kalporosh !important;
+  
 }
