--- a/must-vocabulary/style.css
+++ b/must-vocabulary/style.css
@@ -133,6 +133,7 @@ position: absolute;
 z-index: 1;
 left: -5px;
 top: -22px;
+font-family: kalporosh;
 }
 .tooltip:hover .tooltiptext {
 visibility: visible;
