--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ footer div{
   text-align: center;
   color: yellow;
   font-weight: thin;
-  font-size: 20px;
+  font-size: 4vw;
   font-family: kalporosh !important;
   
 }
