--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@
   font-family: kalporosh;
   src: url(../assets/fonts/kalpurush.ttf);
 }
-
+.kalporosh{
+  font-family: kalporosh !important;
+}
 body {
   color: #2c3e50;
   background: #ecf0f1;
