--- a/must-vocabulary/style.css
+++ b/must-vocabulary/style.css
@@ -69,7 +69,7 @@ body{
 .kalporosh{
  font-family: kalporosh;
  color: green !important;
- font-size: 25px !important; 
+ font-size: 9vw !important; 
  /* margin-left: 30px !important; */
 }
 .hind{
@@ -103,7 +103,7 @@ font-family: kalporosh !important;
  .box p{
    margin-right: 5px;
    font-weight: bold;
-   font-size: 25px;
+   font-size: 5vw;
   margin: 0;
   margin-right: 7px;
   color: #F85846;
