--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ input:checked ~ .tab-content {
   border-radius: 5px;
   margin-bottom: 10px;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 4vw;
   
   display: flex;
   justify-content: space-between;
@@ -141,7 +141,7 @@ input:checked ~ .tab-content {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 10px;
+  font-size: 2vw;
   font-weight: bold;
 }
 
